@@ -1,3 +1,4 @@
+5/20/11 Added JavaAllSimProject which can be used to build all java sims from "all-sims"
 # 00.69.01 (51023) Apr 21, 2011
 3/11/2011 upgraded to proguard 4.6, resolves #2778
 12/6/10 Fixed codebase issue in deployment code
